--- a/stopwatch.css
+++ b/stopwatch.css
@@ -3,7 +3,7 @@
 	padding:0;
 	border:0;
 	outline:0;
-	font-family: sans-serif;
+	font-family: "AvenirNextCondensed-UltraLight", sans-serif;
 }
 
 body {
